<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkerlightblue"
    tools:context=".ui.detailedInfoUI.fragments.WeatherAndOceanForecastFragment"
    android:id="@+id/weatherForecastSymbolView">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecastRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical" >

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>